forth/test/fail/test_const_fold_redundant_align_down.af
use' ../../lang.af
fun: .test_const_fold_redundant_align_down { val -- out } val 1 .align_down end
